--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ag-grid-community": "^32.0.2",
     "ag-grid-react": "^32.0.2",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
