--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-jwt": "^1.2.2"
   },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
