--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "private": true,
   "dependencies": {
     "@openapitools/openapi-generator-cli": "^2.13.4",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,22 +20,28 @@
     "@types/react-dom": "^18.3.0",
     "ag-grid-community": "^32.0.2",
     "ag-grid-react": "^32.0.2",
-    "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.5.4",
     "jquery": "^3.7.1",
+    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.2",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-jwt": "^1.2.2",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "react-jwt": "^1.2.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
@@ -58,6 +71,7 @@
   "devDependencies": {
     "@types/jquery": "^3.5.30",
     "@types/react-slick": "^0.23.13",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "tailwindcss": "^3.4.12"
   }
 }
